# BioPharma-Ai-Agents

./: .gitignore  README.md  config.example.yaml  generate_architecture.py  protocol.docx  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-symmetric-double-programming/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-display-layer-update/: 02-01-PLAN.md  02-01-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-stderr-filtering-error-classification/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/05-csr-data-dictionary/: 05-01-PLAN.md
.planning/phases/06-interactive-execution-mode/: 06-01-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docker/r-clinical/: Dockerfile  healthcheck.R
src/omni_agents/: __init__.py  __main__.py  cli.py  config.py
tests/: conftest.py
tests/test_display/: test_interactive_display.py
tests/test_docker/: __init__.py  test_r_executor.py
tests/test_llm/: test_response_parser.py
tests/test_pipeline/: test_data_dictionary.py  test_pre_execution.py  test_protocol_extraction.py  test_protocol_parser.py  test_resolution.py  test_retry.py  test_schema_validator.py  test_script_cache.py  test_stage_comparator.py  test_stderr_filter.py
(+56 files in other folders)
