[project]
name = "omni-ai-agents"
version = "0.1.0"
description = "Multi-LLM clinical trial orchestration CLI"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.62.0",
    "openai>=2.17.0",
    "docker>=7.1.0",
    "pydantic>=2.9.0",
    "typer>=0.21.0",
    "rich>=13.0.0",
    "loguru>=0.7.3",
    "python-docx>=1.1.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0",
]

[project.scripts]
omni-agents = "omni_agents.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omni_agents"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
